[package]
name = "jetstream_rpc"
version = "14.0.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true


[lib]
bench = false
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
trait-variant = "0.1.2"
futures = "0.3.31"
tokio-util.workspace = true
bytes = "1.11.1"
thiserror = "2.0.17"
url = { workspace = true }
iroh = { workspace = true, optional = true }
turmoil = { workspace = true, optional = true }
tokio = { version = "1.47.1", features = ["sync", "rt"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"], optional = true }
jetstream_error = { version = "14.0.0", path = "../jetstream_error" }
miette = { version = "7.6.0", features = ["fancy"] }
tracing = "0.1.44"
quinn = { version = "0.11.9", optional = true }

x509-certificate = { version = "0.25.0", optional = true }
hex = "0.4.3"
bcder = { version = "0.7.6", optional = true }
[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[build-dependencies]
cfg_aliases = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jetstream_wireformat = { version = "14.0.0", path = "../jetstream_wireformat", default-features = false, features = [
  "std",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jetstream_wireformat = { version = "14.0.0", path = "../jetstream_wireformat" }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1.47.1", features = ["net"] }

[dev-dependencies]
bytes = "1.11.1"
anyhow = "1.0.100"
proptest = "1.9.0"


[features]
default = []
iroh = ["dep:iroh"]
turmoil = ["dep:turmoil"]
pkarr = []
serde = ["dep:serde"]
quinn = ["dep:quinn"]
x509 = ["dep:x509-certificate", "dep:bcder"]
