[package]
name = "jetstream_server"
version = "8.0.10"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.86"
jetstream_9p = { version = "8.0.10", path = "../jetstream_9p" }
jetstream_client = { version = "8.0.10", path = "../jetstream_client", optional = true }
jetstream_rpc = { version = "8.0.10", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "8.0.10", path = "../jetstream_wireformat" }
okstd = { version = "0.2.0", features = ["macros"] }
s2n-quic = { version = "1.53.0", optional = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-vsock = { version = "0.7.0", optional = true }
tokio-util = { version = "0.7.13", features = ["codec"] }
trait-variant = "0.1.2"
futures = "0.3.31"

[features]
default = ["proxy", "quic"]
vsock = ["dep:tokio-vsock"]
proxy = ["dep:jetstream_client"]
quic = ["dep:s2n-quic"]
