[package]
name = "jetstream_ufs"
version = "8.3.1"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true

[dependencies]
jetstream_9p = { version = "8.3.1", path = "../jetstream_9p" }
jetstream_wireformat = { version = "8.3.1", path = "../jetstream_wireformat" }
jetstream_rpc = { version = "8.3.1", path = "../jetstream_rpc" }
jetstream_server = { version = "8.3.1", path = "../jetstream_server" }
serde = { version = "1.0.218", features = ["derive"] }
libc = "0.2.173"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.96"
okstd = { version = "1.0.2", features = ["macros", "argh"] }
argh = "0.1.12"
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
bench = false


[[bin]]
name = "jetstream_ufs"
path = "src/main.rs"
bench = false
