[package]
name = "jetstream_ufs"
version = "9.0.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true

[dependencies]
jetstream_9p = { version = "9.0.0", path = "../jetstream_9p" }
jetstream_wireformat = { version = "9.0.0", path = "../jetstream_wireformat" }
jetstream_rpc = { version = "9.0.0", path = "../jetstream_rpc" }
serde = { version = "1.0.218", features = ["derive"] }
libc = "0.2.175"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
okstd = { version = "1.0.2", features = ["macros", "argh"] }
argh = "0.1.12"
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
bench = false


[[bin]]
name = "jetstream_ufs"
path = "src/main.rs"
bench = false
