[package]
name = "jetstream_ufs"
version = "11.0.1"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true

[dependencies]
jetstream_9p = { version = "11.0.1", path = "../jetstream_9p" }
jetstream_wireformat = { version = "11.0.1", path = "../jetstream_wireformat" }
jetstream_rpc = { version = "11.0.1", path = "../jetstream_rpc", features = ["tokio"] }
serde = { version = "1.0.218", features = ["derive"] }
libc = "0.2.177"
tokio = { version = "1.48.0", features = ["full"] }
okstd = { version = "1.0.2", features = ["macros", "argh"] }
argh = "0.1.12"
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
bench = false


[[bin]]
name = "jetstream_ufs"
path = "src/main.rs"
bench = false
