[package]
name = "jetstream_websocket"
version = "9.3.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.31"
jetstream_rpc = { workspace = true }
jetstream_wireformat = { workspace = true }
tungstenite = { version = "0.28.0" }
