[package]
name = "jetstream_websocket"
version = "10.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.31"
jetstream_rpc = { workspace = true }
jetstream_wireformat = { workspace = true }
tokio = { version = "1.48.0", features = ["io-std", "io-util", "net"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots", "url", "connect"] }
tracing = "0.1.41"
