[package]
name = "jetstream_websocket"
version = "13.0.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.31"
jetstream_rpc = { version = "13.0.0", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "13.0.0", path = "../jetstream_wireformat" }
tokio = { version = "1.48.0", features = ["io-std", "io-util", "net"] }
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-native-roots",
  "url",
  "connect",
] }
tracing = "0.1.41"
