[package]
name = "jetstream_wireformat"
version = "9.4.1"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true



[lib]
bench = false
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["async", "std"]
all = ["std", "async", "testing", "serde", "tokio"]
std = []
async = ["dep:futures"]
testing = ["serde"]
serde = ["dep:serde"]
tokio = ["dep:tokio-util"]

[dependencies]
zerocopy = "0.8.27"
paste = "1.0.15"
bytes = { version = "1.10.0", features = ["serde"] }
jetstream_macros = { workspace = true }
url = {workspace = true}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.177"
tokio = { version = "1.48.0", features = ["full"] }
okstd = { version = "1.0.2" }
futures = { version = "0.3.31", optional = true }
tokio-util = { version = "0.7.16", features = ["full", "io", "time"], optional = true }
time = "0.3.44"
serde = { version = "1.0.218", features = ["derive"], optional = true }
jetstream_macros = { workspace = true }
mio = "1.0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }
js-sys = "0.3.69"
futures = { version = "0.3.31", optional = true }
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
