[package]
name = "rustdoc_to_mdbook"
version = "6.5.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[dependencies]
anyhow = "1.0.93"
glob = "0.3.1"
pkg-config = "0.3"
which = "6.0.1"
indexed_docs = { git = "https://github.com/zed-industries/zed.git", version = "0.1.0" }
html_to_markdown = { git = "https://github.com/zed-industries/zed.git", version = "0.1.0" }
comrak = { version = "0.29.0" }
