[package]
name = "jetstream_interop"
version = "15.2.0"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jetstream_wireformat = { version = "15.2.0", path = "../../components/jetstream_wireformat" }
jetstream_macros = { version = "15.2.0", path = "../../components/jetstream_macros" }
proptest = "1.10.0"
