[package]
name = "jetstream_interop"
version = "16.1.2"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jetstream_wireformat = { version = "16.1.2", path = "../../components/jetstream_wireformat" }
jetstream_macros = { version = "16.1.2", path = "../../components/jetstream_macros" }
proptest = "1.11.0"
